Regression: GPU Subdivision Surface Produces Artifacts #98526

Closed
opened 2022-06-01 01:42:24 +02:00 by Joseph Eagar · 8 comments
Member

Blender version
Broken: Latest blender-v3.2-release branch.
Working: 3.2 (502e1a44b948), 3.3 (3c0d7152c89d)

Short Description
GPU subdivision is not interpolating attributes correctly, both color and normal attributes.

Steps to Reproduce
To reproduce, simply add a subdivision surface modifier to a model and either turn viewport shading to Attribute or hook up a color or attribute node inside the shader and view it in EEVEE.

  • Open .blend file
  • make sure GPU subdivision is turned on
  • Paint with brush

image.png

**Blender version** Broken: Latest blender-v3.2-release branch. Working: 3.2 (`502e1a44b948`), 3.3 (`3c0d7152c89d`) **Short Description** GPU subdivision is not interpolating attributes correctly, both color and normal attributes. **Steps to Reproduce** To reproduce, simply add a subdivision surface modifier to a model and either turn viewport shading to Attribute or hook up a color or attribute node inside the shader and view it in EEVEE. - Open .blend file - make sure GPU subdivision is turned on - Paint with brush ![image.png](https://archive.blender.org/developer/F13125659/image.png)
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar

Added subscriber: @iss

Added subscriber: @iss

Seems to work correctly here.
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Seems to work correctly here. Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65
Member

Added subscribers: @kevindietrich, @PratikPB2123

Added subscribers: @kevindietrich, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm in 3.2(75162ab8c239). Looks like a regression as I'm not able to reproduce this in old 3.2 builds.
Unsure if this is broken for 3.3 too (unable to test atm)
Will raise the priority for now.
cc @kevindietrich

I can confirm in 3.2(`75162ab8c239`). Looks like a regression as I'm not able to reproduce this in old 3.2 builds. Unsure if this is broken for 3.3 too (unable to test atm) Will raise the priority for now. cc @kevindietrich
Pratik Borhade changed title from GPU Subdivision Surface Produces Artifacts to Regression: GPU Subdivision Surface Produces Artifacts 2022-06-01 05:26:48 +02:00

This issue was referenced by 54d076b20d

This issue was referenced by 54d076b20d39dfd043cbbe7dd8375adfb8755937

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-06-01 07:02:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98526
No description provided.