source/blender/draw/intern/draw_cache_impl_subdivision.cc
@@ -563,6 +563,7 @@ static void draw_subdiv_free_edit_mode_cache(DRWSubdivCache *cache)
 void draw_subdiv_cache_free(DRWSubdivCache *cache)
 {
   GPU_VERTBUF_DISCARD_SAFE(cache->patch_coords);
+  GPU_VERTBUF_DISCARD_SAFE(cache->corner_patch_coords);
   GPU_VERTBUF_DISCARD_SAFE(cache->face_ptex_offset_buffer);
   GPU_VERTBUF_DISCARD_SAFE(cache->subdiv_polygon_offset_buffer);
   GPU_VERTBUF_DISCARD_SAFE(cache->extra_coarse_face_data);
@@ -804,6 +805,11 @@ static bool draw_subdiv_topology_info_cb(const SubdivForeachContext *foreach_con
   GPU_vertbuf_init_with_format_ex(
       cache->patch_coords, get_blender_patch_coords_format(), GPU_USAGE_DYNAMIC);
   GPU_vertbuf_data_alloc(cache->patch_coords, cache->num_subdiv_loops);
+
+  cache->corner_patch_coords = GPU_vertbuf_calloc();
+  GPU_vertbuf_init_with_format_ex(
+      cache->corner_patch_coords, get_blender_patch_coords_format(), GPU_USAGE_DYNAMIC);
+  GPU_vertbuf_data_alloc(cache->corner_patch_coords, cache->num_subdiv_loops);
 
   cache->verts_orig_index = GPU_vertbuf_calloc();
   GPU_vertbuf_init_with_format_ex(
@@ -1100,6 +1106,12 @@ static bool draw_subdiv_build_cache(DRWSubdivCache *cache,
    * the mesh to not be watertight, leading to shadowing artifacts (see T97877). */
   blender::Vector<int> first_loop_index(cache->num_subdiv_verts, -1);
 
+  /* Save coordinates for corners, as attributes may vary for each loop connected to the same
+   * vertex. */
+  memcpy(GPU_vertbuf_get_data(cache->corner_patch_coords),
+         cache_building_context.patch_coords,
+         sizeof(CompressedPatchCoord) * cache->num_subdiv_loops);
+
   for (int i = 0; i < cache->num_subdiv_loops; i++) {
     const int vertex = cache_building_context.subdiv_loop_subdiv_vert_index[i];
     if (first_loop_index[vertex] != -1) {
@@ -1379,7 +1391,7 @@ void draw_subdiv_extract_uvs(const DRWSubdivCache *cache,
   GPU_vertbuf_bind_as_ssbo(src_buffer, binding_point++);
   GPU_vertbuf_bind_as_ssbo(cache->gpu_patch_map.patch_map_handles, binding_point++);
   GPU_vertbuf_bind_as_ssbo(cache->gpu_patch_map.patch_map_quadtree, binding_point++);
-  GPU_vertbuf_bind_as_ssbo(cache->patch_coords, binding_point++);
+  GPU_vertbuf_bind_as_ssbo(cache->corner_patch_coords, binding_point++);
   GPU_vertbuf_bind_as_ssbo(cache->verts_orig_index, binding_point++);
   GPU_vertbuf_bind_as_ssbo(patch_arrays_buffer, binding_point++);
   GPU_vertbuf_bind_as_ssbo(patch_index_buffer, binding_point++);
@@ -1454,7 +1466,7 @@ void draw_subdiv_interp_custom_data(const DRWSubdivCache *cache,
   GPU_vertbuf_bind_as_ssbo(cache->subdiv_polygon_offset_buffer, binding_point++);
   GPU_vertbuf_bind_as_ssbo(src_data, binding_point++);
   GPU_vertbuf_bind_as_ssbo(cache->face_ptex_offset_buffer, binding_point++);
-  GPU_vertbuf_bind_as_ssbo(cache->patch_coords, binding_point++);
+  GPU_vertbuf_bind_as_ssbo(cache->corner_patch_coords, binding_point++);
   GPU_vertbuf_bind_as_ssbo(cache->extra_coarse_face_data, binding_point++);
   GPU_vertbuf_bind_as_ssbo(dst_data, binding_point++);
   BLI_assert(binding_point <= MAX_GPU_SUBDIV_SSBOS);
